# engineering-toolkit

./: .gitmodules  README.md  TRACING_IMPROVEMENTS.md
docs/: code-guidelines.md  github-project-management.md  otel-explained.md  tracing-conventions.md  tracing-explained.md
docs/patterns/: embedded-dsl-pattern.md
rust/: .gitignore  Cargo.toml  README.md  check_build.sh
rust/crates/internal-utils/: Cargo.toml  README.md  check_build.sh
rust/crates/internal-utils/examples/: tracing_example.rs
rust/crates/internal-utils/src/: lib.rs  metrics.rs
rust/examples/: openapi.rs  tracing_example.rs
rust/src/: lib.rs
tools/rust/crates/internal-utils/: Cargo.toml  README.md
tools/rust/crates/internal-utils/src/: lib.rs
tools/ts/: .gitignore  package-lock.json  package.json
tools/ts/src/: index.test.ts
tools/ts/src/db/: index.ts  types.ts
tools/ts/src/tracing/: index.ts  logger.ts  otel.ts  types.ts
tools/ts/src/validation/: index.ts  schemas.ts
ts/: README.md  bun.lockb  package-lock.json  package.json  tsconfig.json
ts/examples/: tracing-example.ts
ts/src/: example-service.ts  example.ts  index.ts
ts/src/db/: postgres.ts
ts/src/tracing/: decorators.ts  index.ts  logger.ts  metrics.ts  otel.ts  tracing.test.ts  types.ts
